# entitlements

./: .gitignore  CLAUDE.md  Makefile  README.md  SPEC.md  entitlements.go  entitlements_test.go  go.mod  go.sum
.github/workflows/: ci.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/impl_libraries_20260507/: index.md  metadata.json  plan.md
conductor/archive/multilang_refactor_20260507/: index.md  metadata.json  spec.md
conductor/archive/review_tests_and_coverage_20260507/: plan.md
conductor/tracks/impl_libraries_20260507/: plan.md  spec.md
conductor/tracks/multilang_refactor_20260507/: plan.md
conductor/tracks/review_tests_and_coverage_20260507/: index.md  metadata.json  plan.md  spec.md
docs/superpowers/plans/: 2026-05-25-anonymous-vs-base-entitlements.md  2026-07-09-compact-entitlements.md  2026-07-15-requirement-placeholders.md
docs/superpowers/specs/: 2026-05-25-anonymous-vs-base-entitlements-design.md  2026-07-09-compact-entitlements-design.md  2026-07-15-requirement-placeholders-design.md
entitlements/: entitlements.go  entitlements_test.go
go/: Makefile  entitlements.go  entitlements_internal_test.go  entitlements_test.go  go.mod
python/: Makefile  pyproject.toml
python/src/entitlements/: __init__.py
python/tests/: test_entitlements.py
rust/: Cargo.toml  Makefile
rust/src/: lib.rs
typescript/: .gitignore  Makefile  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
typescript/src/: index.test.ts  index.ts
