[project]
name = "kdex-entitlements"
version = "0.1.0"
description = "A simple entitlements checking library"
authors = [
    {name = "KDEX Tech"}
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
