[project]
name = "kdex-entitlements"
dynamic = ["version"]
description = "A simple entitlements checking library"
authors = [
    {name = "KDEX Tech"}
]
dependencies = []

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]


[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
