[package]
name = "kdex-entitlements"
version = "0.1.0"
edition = "2024"
description = "A simple, robust entitlements checking library"
license = "Apache-2.0"
repository = "https://github.com/kdex-tech/entitlements"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
